Updated Physionet ECGs.

--- a/Project-2/Physionet_ECGs/Physionet_QT_Files.ipynb
+++ b/Project-2/Physionet_ECGs/Physionet_QT_Files.ipynb
@@ -215,13 +215,13 @@
      "input": [
       "%%bash\n",
       "for i in $(cat rec_names.txt); do\n",
-      "    rdsamp -r qtdb/$i -c -H -f 0 -t 900 -pd >$i.csv\n",
+      "    rdsamp -r qtdb/$i -c -H -f 0 -t 900 -v -ps >$i.csv\n",
       "done"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": null
     }
    ],
    "metadata": {}
