Modifications to sel100.csv (removed cell containing units) and added a sel_100_tabsep.csv which is modified to work with Bass (no header, tab delim). Also made changes to Big Data P2 notebook to work with sel.

--- a/Project-2/Big Data P2.ipynb
+++ b/Project-2/Big Data P2.ipynb
@@ -9,17 +9,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BASS ready!\n",
+      "BASS ready!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<module 'bass' from '/Users/morganfine-morris/Documents/Repos/bass/bass.pyc'>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#provide directory in which BASS is located\n",
     "bass_folder_loc = '/Users/morganfine-morris/Documents/Repos/bass'\n",
     "#uncomment '%matplotlib inline' below see plots inline (and remove blocking). \n",
     "#If you change your mind after running it, you must restart kernel\n",
     "#%matplotlib inline \n",
+    "#%matplotlib qt\n",
     "\n",
     "import sys\n",
     "import os\n",
@@ -29,14 +49,113 @@
     "# append the path to the folder containing bass \n",
     "# (which should prob. contain a __init__.py file.) to pythonpath\n",
     "sys.path.append(bass_folder_loc) \n",
-    "import bass"
+    "import bass\n",
+    "reload(bass)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#convert the sel100.csv into something usable (although i manually removed the units.)\n",
+    "ecgcsv = \"./Physionet_ECGs/sel100.csv\"\n",
+    "sel100 = pd.DataFrame.from_csv(ecgcsv, header=0)\n",
+    "new = pd.DataFrame(sel100.values, sel100.index.values)\n",
+    "new.to_csv(\"./Physionet_ECGs/sel_100_tabsep.csv\", sep='\\t',header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# is long QT episodic?\n",
+    "# 12 variants\n",
+    "# automated QT detector. Are they at risk? Which variant do they have?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#initialize new file\n",
+    "Data = {}\n",
+    "Settings = {}\n",
+    "Results ={}\n",
+    "\n",
+    "############################################################################################\n",
+    "#manual Setting block\n",
+    "Settings['folder']= r\"./Physionet_ECGs\"\n",
+    "Settings['Label'] = r'sel_100_tabsep.csv'\n",
+    "Settings['Output Folder'] = 'output'\n",
+    "\n",
+    "#transformation Settings\n",
+    "Settings['Absolute Value'] = True #Must be True if Savitzky-Golay is being used\n",
+    "\n",
+    "Settings['Bandpass Highcut'] = 30 #in Hz\n",
+    "Settings['Bandpass Lowcut'] = 100 #in Hz\n",
+    "Settings['Bandpass Polynomial'] = 4 #integer\n",
+    "\n",
+    "Settings['Linear Fit'] = False #between 0 and 1 on the whole time series\n",
+    "Settings['Linear Fit-Rolling R'] = 0.75 #between 0 and 1\n",
+    "Settings['Linear Fit-Rolling Window'] = 1000 #window for rolling mean for fit, unit is index not time\n",
+    "Settings['Relative Baseline'] = 0 #default 0, unless data is normalized, then 1.0. Can be any float\n",
+    "\n",
+    "Settings['Savitzky-Golay Polynomial'] = 4 #integer\n",
+    "Settings['Savitzky-Golay Window Size'] = 251 #must be odd. units are index not time\n",
+    "\n",
+    "#Baseline Settings\n",
+    "Settings['Baseline Type'] = r'static' #'linear', 'rolling', or 'static'\n",
+    "#For Linear\n",
+    "Settings['Baseline Start'] = 50.04 #start time in seconds\n",
+    "Settings['Baseline Stop'] = 50.18 #end time in seconds\n",
+    "#For Rolling\n",
+    "Settings['Rolling Baseline Window'] = 1 # in seconds. leave as 'none' if linear or static\n",
+    "\n",
+    "#Peaks\n",
+    "Settings['Delta'] = 0.25\n",
+    "Settings['Peak Minimum'] = -1 #amplitude value\n",
+    "Settings['Peak Maximum'] = 1 #amplitude value\n",
+    "\n",
+    "#Bursts\n",
+    "Settings['Burst Area'] = False #calculate burst area\n",
+    "Settings['Exclude Edges'] = False #False to keep edges, True to discard them\n",
+    "Settings['Inter-event interval minimum (seconds)'] = 0.0100 #only for bursts, not for peaks\n",
+    "Settings['Maximum Burst Duration (s)'] = 10 \n",
+    "Settings['Minimum Burst Duration (s)'] = 0\n",
+    "Settings['Minimum Peak Number'] = 1 #minimum number of peaks/burst, integer\n",
+    "Settings['Threshold']= 1.0 #linear: proportion of baseline. \n",
+    "                           #static: literal value.\n",
+    "                           #rolling, linear ammount grater than rolling baseline at each time point.\n",
+    "\n",
+    "#Outputs\n",
+    "Settings['Generate Graphs'] = False #create and save the fancy graph outputs\n",
+    "\n",
+    "\n",
+    "#Settings that you should not change unless you are a super advanced user:\n",
+    "#These are settings that are still in development\n",
+    "Settings['Graph LCpro events'] = False\n",
+    "Settings['File Type'] = r'Plain' #'LCPro', 'ImageJ', 'SIMA', 'Plain', 'Morgan'\n",
+    "Settings['Milliseconds'] = False\n",
+    "############################################################################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [
     {
@@ -64,7 +183,7 @@
        " (19, 'Single Wave-Interactive Protocol.txt')]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -92,7 +211,7 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -174,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -183,14 +302,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "BASS ready!\n",
       "Made plots folder\n",
       "Data Loaded\n",
-      "Sampling Rate= 0.00025 (sec/frame)\n",
-      "rat34_ECG.txt is 606.94975 seconds long.\n"
+      "Sampling Rate= 0.004 (sec/frame)\n",
+      "sel_100_tabsep.csv is 899.996 seconds long.\n"
      ]
     }
    ],
    "source": [
+    "reload(bass)\n",
     "Data, Settings = bass.load_wrapper({},Settings)\n",
     "#Data, Settings = bass.transform_wrapper(Data, Settings) #b/c I can't find smoothing settings that don't make it worse\n",
     "Data['trans'] = Data['original']\n",
@@ -199,11 +320,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean1has no bursts.\n",
+      "Mean2has no bursts.\n",
+      "No Bursts Found in any time series.\n"
+     ]
+    }
+   ],
    "source": [
     "#event detection\n",
     "Results = bass.event_peakdet_wrapper(Data, Settings, Results)\n",
@@ -213,10 +344,31 @@
     "s=1\n",
     "e=20\n",
     "Data_clipped = {'original':Data['original'][s:e], 'trans':Data['trans'][s:e]}\n",
-    "\n",
     "# graph_ts calls show, so unless you ran %matplotlib inline, \n",
     "# notebook will block until you close the plot window\n",
-    "bass.graph_ts(Data_clipped, Settings, Results) "
+    "bass.graph_ts(Data_clipped, Settings, Results, roi=\"Mean2\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([u'Mean1', u'Mean2'], dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Data['original'].keys()\n"
    ]
   },
   {
@@ -324,7 +476,6 @@
     "#Label R and T. Unfortunatly, setting Q and S (the valleys) is much harder (See next cell).\n",
     "peaks_df['letter'] = 'R'\n",
     "bursts_df['letter'] = \"T\"\n",
-    "\n",
     "\n",
     "combined = peaks_df.append(valleys_df).sort('time')\n",
     "\n",
