Added references to Project-2-Master.

--- a/Project-2/Project-2-Master/Project-2-Master.ipynb
+++ b/Project-2/Project-2-Master/Project-2-Master.ipynb
@@ -353,6 +353,25 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##References\n",
+    "\n",
+    "Barsheshet, A., Dotsenko, O., and Goldenberg, I. (2014). Congenital long QT syndromes: prevalence, pathophysiology and management. Paediatr. Drugs 16, 447–456.\n",
+    "\n",
+    "Chockalingam, P., Mizusawa, Y., and Wilde, A.A. (2015). Channelopathies - emerging trends in the management of inherited arrhythmias. Indian Pacing Electrophysiol. J. 15, 43–54.\n",
+    "\n",
+    "Hofman, N., Wilde, A.A.M., Kääb, S., van Langen, I.M., Tanck, M.W.T., Mannens, M.M.A.M., Hinterseer, M., Beckmann, B.-M., and Tan, H.L. (2007). Diagnostic criteria for congenital long QT syndrome in the era of molecular genetics: do we need a scoring system? Eur. Heart J. 28, 575–580.\n",
+    "\n",
+    "Modell, S.M., and Lehmann, M.H. (2006). The long QT syndrome family of cardiac ion channelopathies: a HuGE review. Genet. Med. Off. J. Am. Coll. Med. Genet. 8, 143–155.\n",
+    "\n",
+    "Priori, S.G., Schwartz, P.J., Napolitano, C., Bloise, R., Ronchetti, E., Grillo, M., Vicentini, A., Spazzolini, C., Nastoli, J., Bottelli, G., et al. (2003). Risk Stratification in the Long-QT Syndrome. N. Engl. J. Med. 348, 1866–1874.\n",
+    "\n",
+    "Roden, D.M. (2008). Long-QT Syndrome. N. Engl. J. Med. 358, 169–176."
+   ]
   }
  ],
  "metadata": {
