Added discussion to Project-2-Master.

--- a/Project-2/Project-2-Master/Project-2-Master.ipynb
+++ b/Project-2/Project-2-Master/Project-2-Master.ipynb
@@ -358,6 +358,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##Discussion\n",
+    "\n",
+    "The inherent noisiness of the data, combined with the great variability in T wave presentation (i.e., inverted, biphasic, absent), presented significant obstacles to automation of peak and burst detection. Although we were unable as of yet to find a way to completely automate ECG analysis and QT measurement of a large dataset, our work will provide a starting point for future studies in this area."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##References\n",
     "\n",
     "Barsheshet, A., Dotsenko, O., and Goldenberg, I. (2014). Congenital long QT syndromes: prevalence, pathophysiology and management. Paediatr. Drugs 16, 447–456.\n",
