--- a/Project-2/Project-2-Master/Project-2-Master.ipynb
+++ b/Project-2/Project-2-Master/Project-2-Master.ipynb
@@ -342,17 +342,545 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##ECG Analysis"
+    "##ECG Analysis\n",
+    "\n",
+    "The major tasks in analyzing the ECG for long-QT intervals are:\n",
+    "<ol>\n",
+    "   <li> Detecting peaks and valleys (data may require smoothing first) </li>\n",
+    "   <li> Matching Q, R, S, and T to the detected peaks and valleys. </li>\n",
+    "</ol>\n",
+    "\n",
+    "###Import modules, Load data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import pypeaks as pypk\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "from matplotlib import colors\n",
+    "try:\n",
+    "    import seaborn as sns\n",
+    "    sns.set_style(\"whitegrid\")\n",
+    "except:\n",
+    "    print (\"Consider installing Seaborn! \"\n",
+    "           \"Its a great statistical plotting module \"\n",
+    "           \"with pretty default settings to make your plots prettier!! \"\n",
+    "           \"http://stanford.edu/~mwaskom/software/seaborn/\")\n",
+    "\n",
+    "file_name = '../p01_r01_f.txt'\n",
+    "all_data = pd.DataFrame.from_csv(file_name, header=[0,1], sep=\"\\t\")\n",
+    "\n",
+    "# clip off first 1/2 second of data\n",
+    "# this is probably optional\n",
+    "# and will change for each data set\n",
+    "data = all_data[0.5:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Peak & Valley Detection\n",
+    "\n",
+    "Unfortunately, the method of peak detection causes some of the detected peaks and valleys to be time-offset from the actual peaks and valleys. The effect gets worse the more you smooth the signal, so there is a trade-off: a smoother signal is less likely to yield false-positives during event detection, but it is less accurate.\n",
+    "\n",
+    "####Settings you can change for peak detection\n",
+    "\n",
+    "smooth_amount: degree of smoothing done to data to prepare it for event detection\n",
+    "\n",
+    "peak_amp_thresh: the minimum amplitude/height that a peak should have in a normalized smoothed histogram, to be qualified as a peak. \n",
+    "\n",
+    "valley_thresh: the maximum amplitude/height that a valley should have in a normalized smoothed histogram, to be qualified as a valley. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "smooth_amount = 4\n",
+    "peak_amp_threshold = 3e-05\n",
+    "valley_amp_threshold = 2e-05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Get peaks and valleys from data \n",
+    "# and make dataframes with columns \n",
+    "# for time (t) and amplitude (A)\n",
+    "\n",
+    "hist = pypk.Data(data.index, data.values, smoothness=smooth_amount)\n",
+    "hist.get_peaks(method='slope', peak_amp_thresh=peak_amp_threshold, \n",
+    "               valley_thresh=valley_amp_threshold)\n",
+    "valleys, peaks = hist.peaks.items()\n",
+    "\n",
+    "def flatten_list_of_iterables(iterable_of_iterables):\n",
+    "    \"\"\"\n",
+    "    iterable_of_iterables is an iterable of single-value iterables\n",
+    "    \n",
+    "    some of the data is a list or array of single-value lists or arrays\n",
+    "    this flattens them by iterating thru the iterable of arrays/lists \n",
+    "    and append the first (and only) element from each into a new 1-D array.\n",
+    "    \"\"\"\n",
+    "    return np.array([iterable[0] for iterable in iterable_of_iterables])\n",
+    "\n",
+    "vx, vy = valleys[1]\n",
+    "px, py = peaks[1]\n",
+    "vy = flatten_list_of_iterables(vy)\n",
+    "py = flatten_list_of_iterables(py)\n",
+    "\n",
+    "peaks_df = pd.DataFrame(data=zip(px,py), columns=[\"t\",\"A\"]).sort('t')\n",
+    "valleys_df = pd.DataFrame(data=zip(vx,vy), columns=[\"t\",\"A\"]).sort('t')\n",
+    "#valleys_df.to_csv('valleys.csv')\n",
+    "#peaks_df.to_csv('peaks.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>t</th>\n",
+       "      <th>A</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.040</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.562</td>\n",
+       "      <td>0.085</td>\n",
+       "      <td>p</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       t      A type\n",
+       "0  0.500  0.040    v\n",
+       "1  0.562  0.085    p"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Peak detect returns peak and valley times and amplitudes \n",
+    "# from smoothed data, but we want the original amplitudes\n",
+    "# so we have to remap the times to the amplitudes\n",
+    "def map_event_time_to_amp(combined):\n",
+    "    event_times = []\n",
+    "    orig_amps = []\n",
+    "    types = []\n",
+    "    for k,df in combined.T.iteritems():\n",
+    "\n",
+    "        time = float(df['t'])\n",
+    "        event_times.append(time)\n",
+    "\n",
+    "        amp = data.loc[time].values\n",
+    "        orig_amps.append(amp)\n",
+    "\n",
+    "        feature_type = df['type']\n",
+    "        types.append(feature_type)\n",
+    "\n",
+    "    amps = flatten_list_of_iterables(orig_amps)\n",
+    "    temp_data = list(zip(event_times, amps, types))\n",
+    "    index_list = range(len(event_times))\n",
+    "    pv_orig_amps = pd.DataFrame(data = temp_data, index = index_list, \n",
+    "                                columns=['t','A','type'])\n",
+    "    return pv_orig_amps\n",
+    "\n",
+    "peaks_df['type'] = 'p'\n",
+    "valleys_df['type'] = 'v'\n",
+    "\n",
+    "combined = pd.concat([peaks_df,valleys_df]).sort('t')\n",
+    "orig_amps = map_event_time_to_amp(combined)\n",
+    "orig_amps.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check Accuracy of Event Detection\n",
+    "Determine if event detection settings need to be adjusted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## OPTIONAL\n",
+    "# check accuracy of event detection\n",
+    "\n",
+    "# raw data\n",
+    "plt.plot(data.index, data.values, 'r', c='deepskyblue', label=\"raw data\")\n",
+    "# all the peaks and valleys\n",
+    "plt.plot(orig_amps.t, orig_amps.A, \"o\", c='cadetblue', label=\"\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Locate the R-peaks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import copy\n",
+    "# separate peaks from valleys\n",
+    "groupby_type = orig_amps.groupby('type')\n",
+    "p, v = [groupby_type.get_group(i) for i in groupby_type.groups]\n",
+    "\n",
+    "def calc_R_peak_lower_thresh(peak_amplitudes):\n",
+    "    #now find R features using the np.histogram\n",
+    "    two_bin =  np.histogram(peak_amplitudes, 2)\n",
+    "    bin_edges = two_bin[1]\n",
+    "    mid = bin_edges[1]\n",
+    "    return mid\n",
+    "\n",
+    "# you may need to set this yourself.\n",
+    "R_peak_lower_bound = calc_R_peak_lower_thresh(p['A'])\n",
+    "\n",
+    "# separate out the R peaks, \n",
+    "# all other peaks goes in other_peaks\n",
+    "# some are T peaks, some are noise\n",
+    "R_peaks = copy.deepcopy(p[p['A'] >= R_peak_lower_bound])\n",
+    "other_peaks = copy.deepcopy(p[p['A'] <= R_peak_lower_bound])\n",
+    "all_valleys = copy.deepcopy(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## OPTIONAL\n",
+    "# check that R peaks were properly id'ed \n",
+    "# (circles marking R peaks should now be different color from other peaks)\n",
+    "\n",
+    "# raw data\n",
+    "plt.plot(data.index, data.values, 'r', c='deepskyblue', label=\"raw data\")\n",
+    "# all the peaks and valleys (should be covered by the next set of plots)\n",
+    "plt.plot(orig_amps.t, orig_amps.A, \"o\", c='cadetblue', label=\"\")\n",
+    "# R-peaks, remaining peaks and all valleys\n",
+    "plt.plot(R_peaks.t, R_peaks.A, \"o\",c='teal')\n",
+    "plt.plot(all_valleys.t, all_valleys.A, \"o\",c='royalblue')\n",
+    "plt.plot(other_peaks.t, other_peaks.A, \"o\", c=\"turquoise\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>feature</th>\n",
+       "      <th>t</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.040</td>\n",
+       "      <td></td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.085</td>\n",
+       "      <td></td>\n",
+       "      <td>0.562</td>\n",
+       "      <td>p</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.030</td>\n",
+       "      <td></td>\n",
+       "      <td>0.664</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.025</td>\n",
+       "      <td></td>\n",
+       "      <td>0.666</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.620</td>\n",
+       "      <td>R</td>\n",
+       "      <td>0.702</td>\n",
+       "      <td>p</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-0.140</td>\n",
+       "      <td></td>\n",
+       "      <td>0.730</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       A feature      t type\n",
+       "0  0.040          0.500    v\n",
+       "1  0.085          0.562    p\n",
+       "2 -0.030          0.664    v\n",
+       "3 -0.025          0.666    v\n",
+       "4  0.620       R  0.702    p\n",
+       "5 -0.140          0.730    v"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#label R peaks\n",
+    "R_peaks.loc[:,'feature'] = 'R'\n",
+    "all_events = pd.concat([R_peaks, \n",
+    "                        other_peaks, \n",
+    "                        all_valleys]).fillna('').sort(\"t\")\n",
+    "\n",
+    "all_events.head(6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Calc Q-T Intervals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "T_ends = []\n",
+    "QT_intervals = []\n",
+    "\n",
+    "for i in R_peaks.t.index:\n",
+    "        \n",
+    "    #try to locate the Q feature for this complex\n",
+    "    #if not found, skip this complex\n",
+    "    prev = all_events.loc[i-1]\n",
+    "    if prev['type'] == 'v' and prev['feature'] == \"\":\n",
+    "        Qt = prev['t']\n",
+    "    else:\n",
+    "        continue\n",
+    "\n",
+    "        # starting at i+1 (one after the R peak)\n",
+    "    # iterate until next peak (T feature) is found\n",
+    "    i += 1\n",
+    "    while (all_events.loc[i]['type'] != 'p' \n",
+    "           and all_events.loc[i]['feature'] != \"R\"):\n",
+    "        i += 1\n",
+    "    T = all_events.loc[i]['t']\n",
+    "    #print \"T:\\n\",all_events.loc[i]\n",
+    "    #print \n",
+    "    \n",
+    "    # starting one after i (b/c i is a peak)\n",
+    "    # iterate until next valley is found\n",
+    "    # optimally, this will be a valley \n",
+    "    # immediately after T, but it doesn't matter that much\n",
+    "    # unless that data has a linear trend\n",
+    "    i += 1\n",
+    "    while all_events.loc[i]['type'] != 'v':\n",
+    "        i += 1\n",
+    "    v = all_events.loc[i]['t']\n",
+    "    #print \"v:\\n\",all_events.loc[i]\n",
+    "    #print \n",
+    "    try:\n",
+    "        #print \"v, T: \", v, T\n",
+    "        #print \"(v-T)/2: \",(v-T)/2\n",
+    "        T_end = T + (v-T)/2\n",
+    "    except:\n",
+    "        continue\n",
+    "        \n",
+    "    #print T, v, T_end\n",
+    "\n",
+    "        \n",
+    "    QT_intervals.append(T_end-Qt)\n",
+    "    T_ends.append(T_end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.795\n"
+     ]
+    }
+   ],
+   "source": [
+    "## OPTIONAL\n",
+    "# check that R peaks were properly id'ed \n",
+    "# (circles marking R peaks should now be different color from other peaks)\n",
+    "\n",
+    "# raw data\n",
+    "plt.plot(data.index, data.values, 'r', c='deepskyblue', label=\"raw data\")\n",
+    "# R-peaks, remaining peaks and all valleys\n",
+    "plt.plot(R_peaks.t, R_peaks.A, \"o\",c='teal', label=\"R\")\n",
+    "plt.plot(all_valleys.t, all_valleys.A, \"o\",c='royalblue', label=\"Valleys\")\n",
+    "plt.plot(other_peaks.t, other_peaks.A, \"o\", c=\"turquoise\", label=\"remaining peaks\")\n",
+    "\n",
+    "ymin, ymax = plt.ylim()\n",
+    "#plt.vlines(vs,ymin, ymax, color='orange')\n",
+    "plt.vlines(T_ends,ymin, ymax, color='orchid', label=\"end T peak\")\n",
+    "plt.xlim(5,10)\n",
+    "print max(R_peaks['A'])\n",
+    "plt.ylim(min(all_valleys[\"A\"])/.4, max(R_peaks['A'])*1.9)\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.41999999999999998"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(all_valleys[\"A\"])/-.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "plt.hist(QT_intervals)\n",
+    "plt.xlabel('QT length (s)')\n",
+    "plt.ylabel(\"# events\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    24.000000\n",
+       "mean      0.319125\n",
+       "std       0.076019\n",
+       "min       0.099000\n",
+       "25%       0.313750\n",
+       "50%       0.325500\n",
+       "75%       0.334250\n",
+       "max       0.457000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "QT_stats = pd.Series(QT_intervals).describe()\n",
+    "QT_stats"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -360,7 +888,9 @@
    "source": [
     "##Discussion\n",
     "\n",
-    "The inherent noisiness of the data, combined with the great variability in T wave presentation (i.e., inverted, biphasic, absent), presented significant obstacles to automation of peak and burst detection. Although we were unable as of yet to find a way to completely automate ECG analysis and QT measurement of a large dataset, our work will provide a starting point for future studies in this area."
+    "The inherent noisiness of the data, combined with the great variability in T wave presentation (i.e., inverted, biphasic, absent), presented significant obstacles to automation of peak and burst detection. Although we were unable to find a way to completely automate ECG analysis and QT measurement of a large dataset, our work will provide a starting point for future studies in this area.\n",
+    "\n",
+    "Unfortunately, the method of peak detection causes some of the detected peaks and valleys to be time-offset from the actual peaks and valleys.\n"
    ]
   },
   {
@@ -399,7 +929,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
