Fixed typo in Project-2-Master.

--- a/Project-2/Project-2-Master/Project-2-Master.ipynb
+++ b/Project-2/Project-2-Master/Project-2-Master.ipynb
@@ -187,7 +187,7 @@
     "#Add blue to show mutations\n",
     "for i in range(len(SCN5A_diffs)):\n",
     "    feature = SeqFeature(FeatureLocation(SCN5A_diffs[i],SCN5A_diffs[i]))\n",
-    "    feature_set.add_feature(feature, rlc=colors.aqua)"
+    "    feature_set.add_feature(feature, color=rlc.aqua)"
    ]
   },
   {
