--- a/Project-2/Project-2-Master/Project-2-Master.ipynb
+++ b/Project-2/Project-2-Master/Project-2-Master.ipynb
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {
     "collapsed": false
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {
     "collapsed": true
    },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false
    },
@@ -439,11 +439,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>t</th>\n",
+       "      <th>A</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.500</td>\n",
+       "      <td>0.040</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.562</td>\n",
+       "      <td>0.085</td>\n",
+       "      <td>p</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       t      A type\n",
+       "0  0.500  0.040    v\n",
+       "1  0.562  0.085    p"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Peak detect returns peak and valley times and amplitudes \n",
     "# from smoothed data, but we want the original amplitudes\n",
@@ -488,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {
     "collapsed": true
    },
@@ -513,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {
     "collapsed": true
    },
@@ -544,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {
     "collapsed": true
    },
@@ -567,11 +608,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>feature</th>\n",
+       "      <th>t</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.040</td>\n",
+       "      <td></td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.085</td>\n",
+       "      <td></td>\n",
+       "      <td>0.562</td>\n",
+       "      <td>p</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.030</td>\n",
+       "      <td></td>\n",
+       "      <td>0.664</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.025</td>\n",
+       "      <td></td>\n",
+       "      <td>0.666</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.620</td>\n",
+       "      <td>R</td>\n",
+       "      <td>0.702</td>\n",
+       "      <td>p</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-0.140</td>\n",
+       "      <td></td>\n",
+       "      <td>0.730</td>\n",
+       "      <td>v</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       A feature      t type\n",
+       "0  0.040          0.500    v\n",
+       "1  0.085          0.562    p\n",
+       "2 -0.030          0.664    v\n",
+       "3 -0.025          0.666    v\n",
+       "4  0.620       R  0.702    p\n",
+       "5 -0.140          0.730    v"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#label R peaks\n",
     "R_peaks.loc[:,'feature'] = 'R'\n",
@@ -591,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -600,55 +717,50 @@
    "source": [
     "T_ends = []\n",
     "QT_intervals = []\n",
+    "def calc_QT(R_peaks, all_events):\n",
+    "    for i in R_peaks.t.index:\n",
     "\n",
-    "for i in R_peaks.t.index:\n",
-    "        \n",
-    "    #try to locate the Q feature for this complex\n",
-    "    #if not found, skip this complex\n",
-    "    prev = all_events.loc[i-1]\n",
-    "    if prev['type'] == 'v' and prev['feature'] == \"\":\n",
-    "        Qt = prev['t']\n",
-    "    else:\n",
-    "        continue\n",
+    "        #try to locate the Q feature for this complex\n",
+    "        #if not found, skip this complex\n",
+    "        prev = all_events.loc[i-1]\n",
+    "        if prev['type'] == 'v' and prev['feature'] == \"\":\n",
+    "            Qt = prev['t']\n",
+    "        else:\n",
+    "            continue\n",
     "\n",
     "        # starting at i+1 (one after the R peak)\n",
-    "    # iterate until next peak (T feature) is found\n",
-    "    i += 1\n",
-    "    while (all_events.loc[i]['type'] != 'p' \n",
-    "           and all_events.loc[i]['feature'] != \"R\"):\n",
+    "        # iterate until next peak (T feature) is found\n",
     "        i += 1\n",
-    "    T = all_events.loc[i]['t']\n",
-    "    #print \"T:\\n\",all_events.loc[i]\n",
-    "    #print \n",
-    "    \n",
-    "    # starting one after i (b/c i is a peak)\n",
-    "    # iterate until next valley is found\n",
-    "    # optimally, this will be a valley \n",
-    "    # immediately after T, but it doesn't matter that much\n",
-    "    # unless that data has a linear trend\n",
-    "    i += 1\n",
-    "    while all_events.loc[i]['type'] != 'v':\n",
-    "        i += 1\n",
-    "    v = all_events.loc[i]['t']\n",
-    "    #print \"v:\\n\",all_events.loc[i]\n",
-    "    #print \n",
-    "    try:\n",
-    "        #print \"v, T: \", v, T\n",
-    "        #print \"(v-T)/2: \",(v-T)/2\n",
-    "        T_end = T + (v-T)/2\n",
-    "    except:\n",
-    "        continue\n",
-    "        \n",
-    "    #print T, v, T_end\n",
+    "        while (all_events.loc[i]['type'] != 'p' \n",
+    "               and all_events.loc[i]['feature'] != \"R\"):\n",
+    "            i += 1\n",
+    "        T = all_events.loc[i]['t']\n",
     "\n",
+    "        # starting one after i (b/c i is a peak)\n",
+    "        # iterate until next valley is found\n",
+    "        # optimally, this will be a valley \n",
+    "        # immediately after T, but it doesn't matter that much\n",
+    "        # unless that data has a linear trend\n",
+    "        i += 1\n",
+    "        while all_events.loc[i]['type'] != 'v':\n",
+    "            i += 1\n",
+    "        v = all_events.loc[i]['t']\n",
+    "\n",
+    "        try:\n",
+    "            T_end = T + (v-T)/2\n",
+    "        except:\n",
+    "            continue\n",
+    "\n",
+    "        QT_intervals.append(T_end-Qt)\n",
+    "        T_ends.append(T_end)\n",
+    "    return QT_intervals, T_ends\n",
     "        \n",
-    "    QT_intervals.append(T_end-Qt)\n",
-    "    T_ends.append(T_end)"
+    "QT_intervals, T_ends = calc_QT(R_peaks, all_events)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {
     "collapsed": false
    },
@@ -668,8 +780,7 @@
     "ymin, ymax = plt.ylim()\n",
     "#plt.vlines(vs,ymin, ymax, color='orange')\n",
     "plt.vlines(T_ends,ymin, ymax, color='orchid', label=\"end T peak\")\n",
-    "plt.xlim(5,10)\n",
-    "print max(R_peaks['A'])\n",
+    "plt.xlim(R_peaks.iloc[5][\"t\"],R_peaks.iloc[12][\"t\"])\n",
     "plt.ylim(min(all_valleys[\"A\"])/.4, max(R_peaks['A'])*1.9)\n",
     "plt.legend()\n",
     "plt.show()"
@@ -677,23 +788,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "min(all_valleys[\"A\"])/-.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "#histogram of QT intervals\n",
     "plt.hist(QT_intervals)\n",
     "plt.xlabel('QT length (s)')\n",
     "plt.ylabel(\"# events\")\n",
@@ -702,12 +803,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    24.000000\n",
+       "mean      0.319125\n",
+       "std       0.076019\n",
+       "min       0.099000\n",
+       "25%       0.313750\n",
+       "50%       0.325500\n",
+       "75%       0.334250\n",
+       "max       0.457000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "#stats on QT intervals\n",
     "QT_stats = pd.Series(QT_intervals).describe()\n",
     "QT_stats"
    ]
@@ -718,9 +839,7 @@
    "source": [
     "##Discussion\n",
     "\n",
-    "The inherent noisiness of the data, combined with the great variability in T wave presentation (i.e., inverted, biphasic, absent), presented significant obstacles to automation of peak and burst detection. Although we were unable to find a way to completely automate ECG analysis and QT measurement of a large dataset, our work will provide a starting point for future studies in this area.\n",
-    "\n",
-    "Unfortunately, the method of peak detection causes some of the detected peaks and valleys to be time-offset from the actual peaks and valleys.\n"
+    "The inherent noisiness of the data, combined with the great variability in T wave presentation (i.e., inverted, biphasic, absent), presented significant obstacles to automation of peak and burst detection. Although we were unable to find a way to completely automate ECG analysis and QT measurement of a large dataset, our work will provide a starting point for future studies in this area."
    ]
   },
   {
@@ -759,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
